<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/welcome_title" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:id="@+id/textView" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/SpotifyStreamer"
        android:id="@+id/btnSpotifyStreamer"
        android:onClick="onBtnClick"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/ScoresApp"
        android:id="@+id/btnScoresApp"
        android:layout_below="@+id/btnSpotifyStreamer"
        android:onClick="onBtnClick"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/LibraryApp"
        android:id="@+id/btnLibraryApp"
        android:layout_below="@+id/btnScoresApp"
        android:onClick="onBtnClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/BuildItBigger"
        android:id="@+id/btnBuildItBigger"
        android:layout_below="@+id/btnLibraryApp"
        android:onClick="onBtnClick"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/XYZReader"
        android:id="@+id/btnXYZReader"
        android:onClick="onBtnClick"
        android:layout_below="@+id/btnBuildItBigger"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/CapstoneProject"
        android:id="@+id/btnCapstone"
        android:layout_below="@+id/btnXYZReader"
        android:onClick="onBtnClick"
        android:layout_margin="5dp"/>

</RelativeLayout>
